# stream-tutorial-projects

./: .gitignore  README.md
AI/: README.md
AI/AgenticXcode/: KimiK3Agent.md  UseKimiK3InXcode27.md
AI/Multi-Agent-AI/: langgraph_ai_agent.py  xai_python_multi_agent.py
AI/Multi-Agent-AI/crewai/multi_agent_crew/: README.md  pyproject.toml  report.md
AI/Multi-Agent-AI/crewai/multi_agent_crew/src/multi_agent_crew/: crew.py  main.py
AI/OpenAI_Filesystem_Agent/: expected_wwdc25_announcements.txt  favorite_wwdc25_activities.txt  filesystem_mcp_streamlit_agent.py  local_openai_filesystem_mcp_agent.py  my_wwdc25_predictions.txt
AI/VisionAgents/: kimi_k25_agent_example.py  qwen3_point5_small.py
AI/VisionAgents/Lyria3/: .gitignore  README.md  main.py  music_gen_altered.py  music_gen_quick_start.py  music_gen_realtime_update.py  music_gen_via_phone_call.py  pyproject.toml
AI/VisionAgents/Lyria3/plugins/lyria/: README.md  pyproject.toml
AI/VisionAgents/Lyria3/plugins/lyria/example/: main.py
AI/VisionAgents/Lyria3/plugins/lyria/tests/: test_lyria_music_processor.py
AI/VisionAgents/Lyria3/plugins/lyria/vision_agents/plugins/lyria/: __init__.py  events.py  lyria_audio_track.py  lyria_music_processor.py
AI/VisionAgents/VisionAgentsPythonPlugins/GrokTTS/plugins/grok_tts/: README.md  pyproject.toml
AI/VisionAgents/VisionAgentsPythonPlugins/GrokTTS/plugins/grok_tts/example/: README.md  basic_example.py  customer_support_example.py  healthcare_example.py  hotel_concierge_example.py  medical_receptionist_example.py  pyproject.toml  real_estate_agent_example.py  restaurant_host_example.py
AI/VisionAgents/VisionAgentsPythonPlugins/GrokTTS/plugins/grok_tts/tests/: test_tts.py
AI/VisionAgents/VisionAgentsPythonPlugins/GrokTTS/plugins/grok_tts/vision_agents/plugins/grok_tts/: __init__.py  tts.py
AI/VisionAgents/VisionAgentsPythonPlugins/KittenTTSVisionAgents/: README.md  main.py  pyproject.toml
AI/VisionAgents/VisionAgentsPythonPlugins/KittenTTSVisionAgents/example/: kittentts_example.py
AI/VisionAgents/VisionAgentsPythonPlugins/KittenTTSVisionAgents/tests/: test_tts.py
AI/VisionAgents/VisionAgentsPythonPlugins/KittenTTSVisionAgents/vision_agents/plugins/kittentts/: tts.py
AI/VisionAgents/VisionAgentsPythonPlugins/NeuTTS/plugins/neutts/: README.md  pyproject.toml
AI/VisionAgents/VisionAgentsPythonPlugins/NeuTTS/plugins/neutts/example/: README.md  basic_example.py  customer_service_example.py  healthcare_example.py  inventory_management_example.py  outbound_recruitment_example.py  outbound_sales_example.py  pyproject.toml  tech_support_example.py
AI/VisionAgents/VisionAgentsPythonPlugins/NeuTTS/plugins/neutts/tests/: test_tts.py
AI/VisionAgents/VisionAgentsPythonPlugins/NeuTTS/plugins/neutts/vision_agents/plugins/neutts/: tts.py
AI/VisionAgents/VisionAgentsPythonPlugins/Qwen3-TTS-HF/: VoiceDesignPrompts.md  main.py  pyproject.toml
AI/VisionAgents/VisionAgentsPythonPlugins/Qwen3-TTS-HF/plugins/qwen3tts/: README.md  pyproject.toml
AI/VisionAgents/VisionAgentsPythonPlugins/Qwen3-TTS-HF/plugins/qwen3tts/example/: custom_voice_0_6b_example.py  custom_voice_1_7b_example.py  voice_clone_0_6b_example.py  voice_clone_1_7b_example.py  voice_design_african_american_grandma.py  voice_design_assertive_female.py  voice_design_example.py  voice_design_funny_alien.py  voice_design_mystical_god.py  voice_design_scary_old_woman.py  voice_design_warrior.py
AI/VisionAgents/VisionAgentsPythonPlugins/Qwen3-TTS-HF/plugins/qwen3tts/tests/: test_tts.py
AI/VisionAgents/VisionAgentsPythonPlugins/Qwen3-TTS-HF/plugins/qwen3tts/vision_agents/plugins/qwen3tts/: __init__.py  tts.py
AI/VisionAgents/VisionAgentsPythonPlugins/TADA_TTS/: README.md  main.py  pyproject.toml
AI/VisionAgents/VisionAgentsPythonPlugins/TADA_TTS/plugins/tada/: README.md  pyproject.toml
AI/VisionAgents/VisionAgentsPythonPlugins/TADA_TTS/plugins/tada/example/: README.md  pyproject.toml  tada_example.py
AI/VisionAgents/VisionAgentsPythonPlugins/TADA_TTS/plugins/tada/tests/: test_tts.py
AI/VisionAgents/VisionAgentsPythonPlugins/TADA_TTS/plugins/tada/vision_agents/plugins/tada/: __init__.py  tts.py
AI/VisionAgents/VisionAgentsPythonPlugins/VibeVoice/plugins/vibevoice/: README.md  pyproject.toml
AI/VisionAgents/VisionAgentsPythonPlugins/VibeVoice/plugins/vibevoice/examples/: podcast_with_background_music.py  spontaneous_emotion.py  spontaneous_singing.py
AI/VisionAgents/VisionAgentsPythonPlugins/VibeVoice/plugins/vibevoice/tests/: test_tts.py
AI/VisionAgents/VisionAgentsPythonPlugins/VibeVoice/plugins/vibevoice/vision_agents/plugins/vibevoice/: __init__.py  tts.py
AI/VisionAgents/VisionAgentsPythonPlugins/VoxtralTTS/: README.md  david.m4a  main.py  pyproject.toml
AI/VisionAgents/VisionAgentsPythonPlugins/VoxtralTTS/plugins/voxtral/: README.md  pyproject.toml
AI/VisionAgents/VisionAgentsPythonPlugins/VoxtralTTS/plugins/voxtral/example/: README.md  pyproject.toml  voxtral_example.py  voxtral_voice_cloning_example.py
AI/VisionAgents/VisionAgentsPythonPlugins/VoxtralTTS/plugins/voxtral/tests/: test_tts.py
AI/VisionAgents/VisionAgentsPythonPlugins/VoxtralTTS/plugins/voxtral/vision_agents/plugins/voxtral/: tts.py
AndroidCompose/: AndroidLiveStreaming.txt  README.md
AndroidCompose/AndroidAudioRoom/: AudioRoom.kt
AndroidCompose/AndroidChat/: settings.gradle.kts
AndroidCompose/AndroidLivestream/: AndroidLivestream.kt
ChennelListTheming/: Readme.md
JavaScript/: README.md
JavaScript/NodeJSChatApp/: README.md
PHP-Chat/: README.md
React-Chat-App/: App.tsx  DemoApp.tsx  README.md  chatapp  layout.css
ReactNative/: Readme.md
ReactNative/Livestreaming/: BroadcastApp.tsx  HostVideoApp.tsx
ReactNative/NativeCall/: App.tsx  CallScreen.tsx  HomeScreen.tsx
React_E2EE_Chat/: .env  App.tsx  EncryptedMessage.tsx  Main.tsx  README.md  layout.css  package.json
ReasoningLLMs/: README.md
aws-ivs-stream-chat/: .env  README.md  index.html  package.json
iOS-Chat-Demo/: Readme.md
iOS-Swift/: README.md
iOS-SwiftUI/: README.md
visionOS/: FreeFormDrawingView.swift  README.md
(+359 files in other folders)
