[project]
name = "multi_agent_crew"
version = "0.1.0"
description = "multi_agent_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
multi_agent_crew = "multi_agent_crew.main:run"
run_crew = "multi_agent_crew.main:run"
train = "multi_agent_crew.main:train"
replay = "multi_agent_crew.main:replay"
test = "multi_agent_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
