[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vision-agents-plugins-lyria"
version = "0.1.0"
description = "Google Lyria 3 music generation plugin for Vision Agents"
readme = "README.md"
keywords = ["lyria", "music", "AI", "voice agents", "agents", "google", "gemini"]
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "vision-agents[deepgram]",
    "google-genai>=1.16.0",
]

[project.urls]
Documentation = "https://visionagents.ai/"
Website = "https://visionagents.ai/"
Source = "https://github.com/GetStream/Vision-Agents"

[tool.hatch.build.targets.wheel]
packages = ["vision_agents"]

[tool.hatch.build.targets.sdist]
include = ["/vision_agents"]

[project.optional-dependencies]
example = [
    "vision-agents[openai,deepgram,elevenlabs,getstream]",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
